# mms_load_ion

./: .gitignore  README.md  pyproject.toml
scripts/: apply_filter.py  collect_data.py  crib.pro
src/idl/: tvo_mms_init.pro  tvo_mms_load_ion_dist.pro
src/idl/utils/: logspace.pro  movavg.pro  remove_tvar.pro
src/mms_load_ion/: __init__.py  tvo_mms_load_feeps.py  tvo_mms_load_ion_dist.py
src/mms_load_ion/utils/: __init__.py  numeric.py  pytplot_helpers.py
