[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mms_load_ion"
version = "0.1.0"
description = "Contains IDL and Python routines to load MMS 3D ion DF"
readme = "README.md"
authors = [
    {name = "Tien Vo", email = "tien.a.vo@protone.me"},
]
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Physics",

]
dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "pyspedas",
    "matplotlib",
]
